mpeg4videodec: rewrite the slice end detection of non partitioned packets. This no longer needs thread syncronization thus speeding frame multithreading up. Fixes Ticket28

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>